[package]
name = "vhost"
version = "0.1.0"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vhost"
license = "Apache-2.0 or MIT"

[features]
default = []
vhost-vsock = []
vhost-kern = ["vm-memory"]
vhost-user-master = []
vhost-user-slave = []

[dependencies]
bitflags = ">=1.0.1"
libc = ">=0.2.39"

vmm-sys-util = { git = "https://github.com/liujing2/vmm-sys-util.git" }
vm-memory = { git = "https://github.com/jiangliu/vm-memory.git", branch = "v4", optional = true }
